--- a/frontend/vite-project/src/index.css
+++ b/frontend/vite-project/src/index.css
@@ -29,6 +29,7 @@ body {
 }
 
 /* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
+/* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
 .shake {
 	animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
 	transform: translate3d(0, 0, 0);
