--- a/frontend/vite-project/src/index.css
+++ b/frontend/vite-project/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/bg.png");
-    /* background: linear-gradient(98.63deg, #46a9bd 0%, #3b4958 100%); */
+	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/bg3.jpg");
+    /* background: linear-gradient(98.63deg, #46a9bd 0%, #3b4958 100%), url("/bg1.png"); */
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
